src/objects/Training_Attendee_del__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Attending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Attending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Training_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <formula>Training_Name__r.Training_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Name</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Training Attendees</relationshipLabel>
        <relationshipName>Training_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>